--- a/assets/scss/pages/_print.scss
+++ b/assets/scss/pages/_print.scss
@@ -23,6 +23,10 @@
             &.pos {
                 position: absolute;
                 top:0;
+                &::before {
+                    content: '\00B7';
+                    font-size: 25px;
+                }
             }
         }
         
@@ -130,13 +134,22 @@
                 background: #F0F1F2;
                 border: 3px solid #999;
                 box-sizing: border-box;
-                border-radius: 8px;
-                margin-right: 50px;
+                border-radius: 8px;                
                 position: relative;
                 text-align: center;
                 font-size: 20px;
                 letter-spacing: -0.05em;
                 width: 230px;
+                overflow: hidden;
+                margin-right: 0;
+                &.img {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    background-color: #fff;
+                    border: 0 solid #000;
+                    width:50px;
+                }
                 p {
                     background-color: #fff;
                     padding:10px 0;
@@ -168,11 +181,8 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    &::after {
-                        display: none;
-                    }
                 }
-                &:nth-child(3) {
+                &:nth-child(5) {
                     width: 260px;
                 }
             }
@@ -189,11 +199,10 @@
             }
         }
     }
-    .form_tit {
-    
-        width: 395px;
+    .form_tit {    
+        width: max-content;
         margin:60px auto;
-        padding:10px 0;
+        padding:10px;
         border: 1px solid #555;
         border-left: 0 solid #000;
         border-right: 0 solid #000;
@@ -236,21 +245,293 @@
         font-size: 20px;
         letter-spacing: -0.05em;
         li {
-            padding-left: 12px;
+            padding-left: 18px;
             margin-bottom: 5px;
+            &::before {
+                content: '\00B7';
+                font-size: 25px;
+                position: absolute;
+                left: 0;
+                top:-5px;
+            }
             &::after {
-                width: 3px;
-                height: 3px;
-                top:11px;
+                display: none;
             }
             p {
                 margin-top: 0;
             }
         }
     }
-    
+        
     @media print {
-        zoom: 0.5;
+        .myinfo { 
+            h2 {
+                margin: 20px 0 16px;
+            }
+            .text_list {
+                padding:10px 20px;
+            }
+            .tbl_p {
+                th,
+                td {
+                    font-size: 18px;
+                    padding:10px 0 10px 30px;
+                }
+            }
+        }
+        .btn.__top {
+            display: none;
+            width: 0;
+            height: 0;
+        }        
+        .result {
+            width: 100%;
+            margin:0 auto;
+            padding:0;
+            h2 {
+                font-size: 24px;
+                margin: 10px 0 16px;
+            }
+            &.form {
+                padding-bottom: 40px;
+                h2 {
+                    padding-left: 10px;
+                }
+                margin-bottom: 0;
+                letter-spacing: -0.03em;
+                .book_order_list {      
+                    border-top: 1px solid #999;
+                    border-top-color: #999;                  
+                    b {
+                        display: inline-flex;
+                        align-items: center;
+                        width: 100px;
+                        height: 69px;
+                        font-size: 18px;        
+                        padding: 0 15px;
+                        color:#333;                    
+                        border-left: 1px solid #999;
+                        border-right: 1px solid #999;
+                        background-color: #F4F5F7;
+                        &:first-child {
+                            border-left: 0 solid #000;
+                        }
+                    }
+                    li {                                        
+                        align-items: center;
+                        border-bottom:1px solid #999;
+                        overflow: hidden;
+                        > div {
+                            padding:0 30px;
+                            height: 69px;
+                            font-size: 18px;        
+                            strong {
+                                font-size: 18px;
+                            }
+                        }
+                    }
+                    &.half {
+                        ul {
+                            display: flex;
+                            flex-wrap: wrap;
+                        }                    
+                        li {
+                            width: 50%;
+                            border-bottom-color:#999;
+                            &:nth-child(even) {
+                                b {
+                                    border-left: 1px solid #999;
+                                }
+                            }
+                            
+                        }
+                    }
+                }
+    
+                .chart_wrap {
+                    padding:0 30px;
+                    display: flex;
+                    justify-content: space-between;
+                    .radar_chart {
+                        padding:0 ;
+                        margin-top: 0;
+                        width: 400px;
+                    }
+                    .bar_chart {
+                        margin-top: 0;
+                        width: 450px;
+                        height: 400px;
+                    }
+                }
+                
+                .assessment_tbl {
+                    margin: 80px 0 0;
+                    table {
+                        font-size: 20px;
+                        th,
+                        td {
+                            padding:15px 0;
+                        }
+                        tfoot {
+                            td {
+                                color:#666;
+                            }
+                        }
+                    }            
+                }
+                .assessment_list {
+                    padding-top: 20px;
+                    h3 {
+                        font-size: 20px;                    
+                        padding-left: 20px;
+                        margin:30px 0 12px;
+                        &::before {
+                            content: '∙';
+                            font-size: 30px;
+                            left: 8px;
+                            top:-10px;
+                        }
+                    }
+                    p {
+                        border: 1px solid #666;
+                        margin:0;
+                        padding:25px 30px;
+                        background-color:#fff;
+                        font-size: 18px;
+                        line-height: 1.6;
+                        color:#333;
+                    }
+                }
+    
+                .item_evaluation {
+                    margin:16px 0 0;
+                    th {
+                        padding:10px 0;
+                        font-size: 18px;
+                        font-weight: 400;
+                        background-color: #F4F5F7;
+                        color:#000;
+                        border-top: 1px solid #999;
+                        border-bottom: 1px solid #999;
+                        border-left: 1px solid #999;
+                    }
+                    td {
+                        font-size: 18px;
+                        color:#000;
+                        &.judgment {
+                            font-size: 24px;
+                            line-height: 1;
+                        }
+                    }
+                    tbody {
+                        td {
+                            vertical-align: top;
+                            background-color: #fff;
+                            padding:10px 0;
+                            border-left: 1px solid #999;
+                            border-bottom: 1px solid #999;
+                            &:first-child {
+                                border-left: 0 solid #000;
+                            }
+                            &:nth-child(even) {
+                                background-color: #F4F5F7;
+                            }                        
+                            &.commentary {
+                                background-color: #fff;
+                                text-align: left;
+                                padding:10px 15px;
+                                font-size: 18px;
+                                color:#000;
+                                .t2 {
+                                    margin-top: 10px;
+                                    color:#333;
+                                    line-height: 1.4;
+                                }
+                            }
+                        }
+                    }
+                }
+    
+                .description_wrap {
+                    display:block;
+                    padding-top:0;
+                    .description_txt {
+                        font-size: 18px;
+                        color:#333;
+                        padding-left: 10px;
+                        &::before {                        
+                            font-size: 30px;
+                            top:0;
+                            line-height: 20px;
+                        }
+                    }
+                }
+                .percentile_info {
+                    margin-top: 20px;
+                    th,
+                    td {
+                        padding:10px 0;
+                        color:#666;
+                        font-size: 21px;
+                    }
+                    th {
+                        padding:5px 0;
+                        font-weight: 500;
+                        background-color: #F6F1FF;
+                    }
+                }
+                .description_list {
+                    margin:30px 0 0;
+                    background-color: #F4F5F7;
+                    padding:40px;
+                    li {
+                        display: flex;
+                        align-items: center;
+                        & + li {
+                            margin-top: 13px;
+                        }
+                        div {
+                            flex: 1;
+                        }
+                    }
+                    b {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        text-align: center;
+                        width: 140px;
+                        height: 80px;
+                        font-size: 20px;
+                        font-weight: 500;
+                        color:#333;
+                        border-radius: 10px;
+                        border: 2px solid #c4c4c4;
+                        background-color: #fff;
+                        margin-right: 20px;
+                        line-height: 1.2;
+                        
+                    }
+                    p {
+                        font-size: 18px;
+                        color:#333;
+                        line-height: 1.4;
+                        padding-left: 10px;
+                        position: relative;
+                        & + p {
+                            margin-top: 5px;
+                        }
+                        &::before {
+                            content: '-';
+                            position: absolute;
+                            left: 0;
+                        }
+                    }                
+                }
+                .btn_app {
+                    display: none;
+                }
+            }
+        }
     }    
 }
 
